force-app/main/default/objects/Job_Order__c/Job_Order__c.object-meta.xml
<CustomObject>
    <description>ECMv2.1 Object used to track Job Orders for a specific employer or organization.</description>
    <label>Job Order</label>
    <nameField>
        <label>Job Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>