force-app/main/default/objects/Job_Order__c/fields/Additional_Candidates__c.field-meta.xml
<CustomField>
    <fullName>Additional_Candidates__c</fullName>
    <inlineHelpText>Temporary field used to list Traditional or Advancement students not available via Job Match.</inlineHelpText>
    <label>Additional Candidates</label>
    <type>TextArea</type>
</CustomField>