force-app/main/default/objects/Job_Order__c/fields/AdditionalSteps__c.field-meta.xml
<CustomField>
    <fullName>AdditionalSteps__c</fullName>
    <label>Additional Steps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proof of Record</fullName>
            </value>
            <value>
                <fullName>Employment Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>