force-app/main/default/objects/Job_Order__c/fields/Advancement_Job_Matching_Status__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Job_Matching_Status__c</fullName>
    <formula>&quot;Yes/NA&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advancement Job Matching Status</label>
    <type>Text</type>
</CustomField>