force-app/main/default/objects/Job_Order__c/fields/Assign_Owner_Based_on_Position_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Assign_Owner_Based_on_Position_Vertical__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Change made on 6/5/17.</description>
    <inlineHelpText>Prior to June 2017, was based on position vertical.</inlineHelpText>
    <label>Assign Owner Based on Account Lead</label>
    <type>Checkbox</type>
</CustomField>