force-app/main/default/objects/Job_Order__c/fields/Case_Record_Program_Stage__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Program_Stage__c</fullName>
    <formula>&quot;Eligible for Job Match&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Record Program Stage</label>
    <type>Text</type>
</CustomField>