force-app/main/default/objects/Job_Order__c/fields/Case_Record_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Status__c</fullName>
    <description>ECMv2.1</description>
    <label>Case Record Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Waiting List</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Informed</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Screened</fullName>
            </value>
            <value>
                <fullName>Assessed</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
            <value>
                <fullName>Re-enrolled</fullName>
            </value>
            <value>
                <fullName>Closure</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>