force-app/main/default/objects/Job_Order__c/fields/Computer_Skills_Consider_Students_With__c.field-meta.xml
<CustomField>
    <fullName>Computer_Skills_Consider_Students_With__c</fullName>
    <inlineHelpText>Choose all that apply. For example, if a position is appropriate for someone with &quot;Moderate Aptitude&quot; or higher, also choose &quot;Advanced Aptitude&quot;.</inlineHelpText>
    <label>Computer Skills: Consider Students With</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic Aptitude</fullName>
            </value>
            <value>
                <fullName>Moderate Aptitude</fullName>
            </value>
            <value>
                <fullName>High Aptitude</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>