force-app/main/default/objects/Job_Order__c/fields/Conviction_Policy_Consider_Students__c.field-meta.xml
<CustomField>
    <fullName>Conviction_Policy_Consider_Students__c</fullName>
    <inlineHelpText>Choose all that apply. For example, if the company allows candidates &quot;With convictions within past 7 yrs&quot;, also choose &quot;With convictions older than 7 yrs&quot; and &quot;With no convictions&quot;</inlineHelpText>
    <label>Conviction Policy: Consider Students</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>With convictions within past 7 yrs</fullName>
            </value>
            <value>
                <fullName>With convictions older than 7 yrs</fullName>
            </value>
            <value>
                <fullName>With no convictions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>