force-app/main/default/objects/Job_Order__c/fields/Conviction_Policy_Note__c.field-meta.xml
<CustomField>
    <fullName>Conviction_Policy_Note__c</fullName>
    <label>Conviction Policy Note</label>
    <type>TextArea</type>
</CustomField>