force-app/main/default/objects/Job_Order__c/fields/Conviction_Policy_Rating__c.field-meta.xml
<CustomField>
    <fullName>Conviction_Policy_Rating__c</fullName>
    <formula>if (includes (Conviction_Policy_Consider_Students__c, &quot;With convictions within past 7 yrs&quot;), &quot;Friendly&quot;, 

if (includes (Conviction_Policy_Consider_Students__c, &quot;With convictions older than 7 yrs&quot;), &quot;Flexible&quot;, 

if (includes (Conviction_Policy_Consider_Students__c, &quot;With no convictions&quot;), &quot;Strict&quot;,

&quot;Rating Not Available&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Based on &quot;Job Conviction Policy: Consider Students&quot;</inlineHelpText>
    <label>Conviction Policy Rating</label>
    <type>Text</type>
</CustomField>