force-app/main/default/objects/Job_Order__c/fields/CWF_Candidates__c.field-meta.xml
<CustomField>
    <fullName>CWF_Candidates__c</fullName>
    <inlineHelpText>Temporary field used to list CWF Send Out candidates.</inlineHelpText>
    <label>CWF Candidates</label>
    <type>TextArea</type>
</CustomField>