force-app/main/default/objects/Job_Order__c/fields/Driver_s_License_Required__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_License_Required__c</fullName>
    <label>Driver&apos;s License Required</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>