force-app/main/default/objects/Job_Order__c/fields/Drug_Testing_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Drug_Testing_Requirement__c</fullName>
    <description>This is to determine on a job order what kind of drug testing may or may not be required.</description>
    <label>Drug Testing Requirement</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Drug Test</fullName>
            </value>
            <value>
                <fullName>Drug Test- Marijuana Fine</fullName>
            </value>
            <value>
                <fullName>Drug Test- No Marijuana</fullName>
            </value>
            <value>
                <fullName>Drug Test- Hair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>