force-app/main/default/objects/Job_Order__c/fields/ECM_Record_Matching_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ECM_Record_Matching_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ECMv2.1 Defines what configuration is used for record matching.</description>
    <label>ECM Record Matching Configuration</label>
    <referenceTo>ECM_Record_Matching_Configuration__c</referenceTo>
    <relationshipName>Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>