force-app/main/default/objects/Job_Order__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <inlineHelpText>Choose all education types that are appropriate for this position. For example, if Associates or higher is appropriate, choose &quot;Associates&quot; AND &quot;Bachelors or higher&quot;.</inlineHelpText>
    <label>Education</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No GED/HS Diploma</fullName>
            </value>
            <value>
                <fullName>GED/HS Diploma</fullName>
            </value>
            <value>
                <fullName>Associates</fullName>
            </value>
            <value>
                <fullName>Bachelors or higher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>