force-app/main/default/objects/Job_Order__c/fields/Education_Enforcement__c.field-meta.xml
<CustomField>
    <fullName>Education_Enforcement__c</fullName>
    <description>ECM Job Order Process for Cara</description>
    <label>Education Enforcement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>