force-app/main/default/objects/Job_Order__c/fields/Employer_Status__c.field-meta.xml
<CustomField>
    <fullName>Employer_Status__c</fullName>
    <formula>TEXT(Organization__r.Employer_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Test field for job matching</inlineHelpText>
    <label>Employer Status</label>
    <type>Text</type>
</CustomField>