force-app/main/default/objects/Job_Order__c/fields/Employment_Source__c.field-meta.xml
<CustomField>
    <fullName>Employment_Source__c</fullName>
    <label>Employment Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cara Employment Partner</fullName>
            </value>
            <value>
                <fullName>Self-Secure</fullName>
            </value>
            <value>
                <fullName>Hiring Event</fullName>
            </value>
            <value>
                <fullName>Cara Connects</fullName>
                <isActive>false</isActive>
                <label>Cara Connects</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>