force-app/main/default/objects/Job_Order__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>sample job match field</description>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>