force-app/main/default/objects/Job_Order__c/fields/High_Priority_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>High_Priority_Check_Date__c</fullName>
    <label>High Priority Check Date</label>
    <type>Date</type>
</CustomField>