force-app/main/default/objects/Job_Order__c/fields/HighPriority__c.field-meta.xml
<CustomField>
    <fullName>HighPriority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This check box indicated that this job requires higher urgency.</description>
    <inlineHelpText>This check box indicated that this job requires higher urgency.</inlineHelpText>
    <label>High Priority</label>
    <type>Checkbox</type>
</CustomField>