force-app/main/default/objects/Job_Order__c/fields/Hot_Job__c.field-meta.xml
<CustomField>
    <fullName>Hot_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to indicate that this job is in demand enough to be shared for employment service team members.</description>
    <inlineHelpText>This is to indicate that this job is in demand enough to be shared for employment service team members. Note: Only stays &quot;Hot&quot; for 14 days.</inlineHelpText>
    <label>Hot Job</label>
    <type>Checkbox</type>
</CustomField>