force-app/main/default/objects/Job_Order__c/fields/Hot_Job_End__c.field-meta.xml
<CustomField>
    <fullName>Hot_Job_End__c</fullName>
    <label>Hot Job End</label>
    <type>Date</type>
</CustomField>