force-app/main/default/objects/Job_Order__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>ECM Job Order Process for Cara</description>
    <inlineHelpText>Per week</inlineHelpText>
    <label>Hours</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>