force-app/main/default/objects/Job_Order__c/fields/Job_Category__c.field-meta.xml
<CustomField>
    <fullName>Job_Category__c</fullName>
    <description>ECMv2.1</description>
    <label>Job Category (outdated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Food Service</fullName>
            </value>
            <value>
                <fullName>General Labor</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Janitorial</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Office Services</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>