force-app/main/default/objects/Job_Order__c/fields/Job_Computer_Skills__c.field-meta.xml
<CustomField>
    <fullName>Job_Computer_Skills__c</fullName>
    <description>ECM FIELD - DO NOT DELETE OR CHANGE API NAME</description>
    <label>Job Computer Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Skill One</fullName>
            </value>
            <value>
                <fullName>Skill Two</fullName>
            </value>
            <value>
                <fullName>Skill Three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>