force-app/main/default/objects/Job_Order__c/fields/Job_Order_Has_Send_Outs__c.field-meta.xml
<CustomField>
    <fullName>Job_Order_Has_Send_Outs__c</fullName>
    <formula>if (Number_of_Send_Outs__c &gt; 0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Order Has Send Outs</label>
    <type>Checkbox</type>
</CustomField>