force-app/main/default/objects/Job_Order__c/fields/Job_Order_Rating__c.field-meta.xml
<CustomField>
    <fullName>Job_Order_Rating__c</fullName>
    <formula>if ( ISPICKVAL (Benefits__c, &quot;Yes&quot;), 

if ( Salary_with_Benefits__c = 0, &quot;Not Available&quot;, 
if ( Salary_with_Benefits__c &gt; 0 &amp;&amp; Salary_with_Benefits__c &lt;= 16900, &quot;Grey&quot;, 
if ( Salary_with_Benefits__c &gt; 16900 &amp;&amp; Salary_with_Benefits__c &lt;= 24544, &quot;Yellow&quot;,
if ( Seasonal_or_Variable_Hours__c, &quot;Yellow&quot;, 
&quot;Green&quot;)))),

if ( Salary__c = 0, &quot;Not Available&quot;, 
if ( Salary__c &gt; 0 &amp;&amp; Salary__c &lt;= 16900, &quot;Grey&quot;, 
if ( Salary__c &gt; 16900 &amp;&amp; Salary__c &lt;= 24544, &quot;Yellow&quot;,
if ( Seasonal_or_Variable_Hours__c, &quot;Yellow&quot;, 
&quot;Green&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates where job order falls in Placement Hours &amp; Wage Table.</inlineHelpText>
    <label>Job Order Rating</label>
    <type>Text</type>
</CustomField>