force-app/main/default/objects/Job_Order__c/fields/Job_Order_Rating_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Job_Order_Rating_Instructions__c</fullName>
    <label>Job Order Rating Instructions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Please enter Hours and Wage values</fullName>
            </value>
            <value>
                <fullName>Management approval required before Send Out</fullName>
            </value>
            <value>
                <fullName>IDS approval required before Send Out if indicated on Case Record</fullName>
            </value>
            <value>
                <fullName>Counted for any student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>