force-app/main/default/objects/Job_Order__c/fields/Job_Order_Stage_Formula__c.field-meta.xml
<CustomField>
    <fullName>Job_Order_Stage_Formula__c</fullName>
    <formula>if (Number_of_Jobs_Placements__c &gt; 0, &quot;Closed Won&quot;,

if (Close_Date__c &lt;= today() &amp;&amp;  Number_of_Send_Outs__c = 0, &quot;Closed No Send Outs&quot;,

if (Close_Date__c &lt;= today(), &quot;Closed Lost&quot;,

if (Number_of_Send_Outs__c &gt; 0, &quot;Send Out&quot;,

&quot;Job Order Shared&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field updates nightly as part of a batch process.</inlineHelpText>
    <label>Job Order Stage (Formula)</label>
    <type>Text</type>
</CustomField>