force-app/main/default/objects/Job_Order__c/fields/Job_Owner__c.field-meta.xml
<CustomField>
    <fullName>Job_Owner__c</fullName>
    <description>This field is used to display the Job Owner full name</description>
    <formula>Owner:User.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Owner</label>
    <type>Text</type>
</CustomField>