force-app/main/default/objects/Job_Order__c/fields/Job_Placement_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Placement_Type__c</fullName>
    <description>ECM Job Order Process for Cara</description>
    <label>Job/Placement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Internship</fullName>
            </value>
            <value>
                <fullName>External Transitional</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Temporary-Permanent</fullName>
            </value>
            <value>
                <fullName>Short-Term</fullName>
            </value>
            <value>
                <fullName>Long-Term</fullName>
            </value>
            <value>
                <fullName>Permanent-Inactive</fullName>
            </value>
            <value>
                <fullName>Permanent-Advancement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>