force-app/main/default/objects/Job_Order__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <formula>LEFT(Name, Find(&quot;, 20&quot;,Name)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Title</label>
    <type>Text</type>
</CustomField>