force-app/main/default/objects/Job_Order__c/fields/JobIsUnion__c.field-meta.xml
<CustomField>
    <fullName>JobIsUnion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Is Union</label>
    <type>Checkbox</type>
</CustomField>