force-app/main/default/objects/Job_Order__c/fields/Language_Fluency__c.field-meta.xml
<CustomField>
    <fullName>Language_Fluency__c</fullName>
    <label>Language Fluency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Polish</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Tagalog</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>