force-app/main/default/objects/Job_Order__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>job match test field</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>