force-app/main/default/objects/Job_Order__c/fields/Legacy_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Created_By__c</fullName>
    <label>Legacy Created By</label>
    <length>25</length>
    <type>Text</type>
</CustomField>