force-app/main/default/objects/Job_Order__c/fields/Legacy_Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Salesforce_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Legacy Salesforce ID from Opportunity. Case sensitive, so do not use for Excel matching.</inlineHelpText>
    <label>Legacy Salesforce ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>