force-app/main/default/objects/Job_Order__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>ECM Job Order Process for Cara</description>
    <label>Location</label>
    <length>150</length>
    <type>Text</type>
</CustomField>