force-app/main/default/objects/Job_Order__c/fields/NoMatchReason__c.field-meta.xml
<CustomField>
    <fullName>NoMatchReason__c</fullName>
    <description>This is to document the reason why the job order was not successful.</description>
    <label>No Match Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pay too low</fullName>
            </value>
            <value>
                <fullName>Location too far</fullName>
            </value>
            <value>
                <fullName>Background barriers too strict</fullName>
            </value>
            <value>
                <fullName>No skill match</fullName>
            </value>
            <value>
                <fullName>Not enough candidate matches</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>