force-app/main/default/objects/Job_Order__c/fields/Not_Filled_Date__c.field-meta.xml
<CustomField>
    <fullName>Not_Filled_Date__c</fullName>
    <description>ECM job order process for TCP</description>
    <label>Not Filled Date</label>
    <type>Date</type>
</CustomField>