force-app/main/default/objects/Job_Order__c/fields/Number_of_Interviews_Send_Out_Details__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Interviews_Send_Out_Details__c</fullName>
    <label># Interviews (Send Out Details)</label>
    <summarizedField>Send_Out_Detail__c.Most_Recent_Interview_Count__c</summarizedField>
    <summaryForeignKey>Send_Out_Detail__c.Job_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>