force-app/main/default/objects/Job_Order__c/fields/Number_of_Interviews_Send_Out_Emp__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Interviews_Send_Out_Emp__c</fullName>
    <inlineHelpText>Count of Send Out / Employment records with Stage &quot;First Interview&quot; or higher. Updates once nightly.</inlineHelpText>
    <label># Interviews (Send Out / Emp)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>