force-app/main/default/objects/Job_Order__c/fields/Number_of_Jobs_Available__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Jobs_Available__c</fullName>
    <description>ECM Job Order Process for Cara</description>
    <inlineHelpText>Enter the CEP number of jobs available that are expected to be filled by TCP students.</inlineHelpText>
    <label>Number of Jobs Available</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>