force-app/main/default/objects/Job_Order__c/fields/Number_of_Jobs_Placements__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Jobs_Placements__c</fullName>
    <description>Send Out / Employment field updated by Rollup Helper.</description>
    <formula>Number_of_Jobs_Placements_Send_Out_Emp__c +  Number_of_Jobs_Placements_Send_Out_Detai__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Includes all Send Outs resulting in Jobs/Placements, before and after Studentforce launch. Updates nightly.</inlineHelpText>
    <label># Jobs/Placements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>