force-app/main/default/objects/Job_Order__c/fields/Number_of_Jobs_Placements_Send_Out_Detai__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Jobs_Placements_Send_Out_Detai__c</fullName>
    <label># Jobs/Placements (Send Out Details)</label>
    <summarizedField>Send_Out_Detail__c.Placement_Count__c</summarizedField>
    <summaryForeignKey>Send_Out_Detail__c.Job_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>