force-app/main/default/objects/Job_Order__c/fields/Number_of_Jobs_Placements_Send_Out_Emp__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Jobs_Placements_Send_Out_Emp__c</fullName>
    <description>Set by Rollup Helper.</description>
    <inlineHelpText>Count of Send Out / Employment records with Stage &quot;Job/Placement&quot;. Updates once nightly.</inlineHelpText>
    <label># Jobs/Placements (Send Out / Emp)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>