force-app/main/default/objects/Job_Order__c/fields/Number_of_Send_Outs_Send_Out_Details__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Send_Outs_Send_Out_Details__c</fullName>
    <label># Send Outs (Send Out Details)</label>
    <summaryForeignKey>Send_Out_Detail__c.Job_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>