force-app/main/default/objects/Job_Order__c/fields/Open_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Open_Date_Formula__c</fullName>
    <formula>Open_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Date (Formula)</label>
    <type>Date</type>
</CustomField>