force-app/main/default/objects/Job_Order__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>ECMv2.1</description>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Orders</relationshipLabel>
    <relationshipName>Job_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>