force-app/main/default/objects/Job_Order__c/fields/Organization_ID__c.field-meta.xml
<CustomField>
    <fullName>Organization_ID__c</fullName>
    <formula>Organization__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization ID</label>
    <type>Text</type>
</CustomField>